# autoscope

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  build_linux.sh  build_macos.sh  build_windows.ps1  config.yaml  diag_crawl_steps.py  diag_load.py  main.py  pyproject.toml  requirements.txt  run.sh  run_desktop.py  run_desktop.sh
.github/workflows/: build-and-release.yml
autoscope/: __init__.py  cli.py  crawler.py
autoscope/config/: loader.py
autoscope/core/: case.py  runner.py
autoscope/desktop/: __init__.py  app.py  folder_picker.py  main.py  paths.py  settings.py  setup.py
autoscope/drivers/: adb.py  android.py  ios.py  mobile.py  web.py
autoscope/reporting/: html.py  result.py
packaging/: build_linux.sh  build_macos.sh
reports/: auto_report.html  auto_results.json  crawl.html  crawl.json  report.html  results.json
scripts/: android_check_android.py  android_recording_test_android.py  mobile_check_mobile.py  mobile_recording_test_mobile.py  rerun_check_android.py  rerun_check_mobile.py  test_login_android.py  test_login_mobile.py  test_login_web.py
tests/android/: test_example_android.py
tests_core/: test_adb.py  test_android_recorder_math.py  test_config_loader.py  test_desktop_settings.py  test_desktop_views_smoke.py  test_html_report.py  test_ios_driver.py  test_mobile_recorder_math.py  test_script_builder.py  test_web_recorder_threading.py
tests_ios/: test_example_ios.py
tests_mobile/: test_example_mobile.py
tests_web/: test_example_web.py
tools/: diag_crawl_steps.py  diag_login.py  start_ios_wda.sh
(+22 files in other folders)
